fix: remove visibility css

--- a/packages/ai-native/src/browser/widget/inline-stream-diff/inline-stream-diff.module.less
+++ b/packages/ai-native/src/browser/widget/inline-stream-diff/inline-stream-diff.module.less
@@ -31,7 +31,6 @@
 
 .inline_diff_accept_partial_widget_container {
   width: 100%;
-  visibility: visible;
 
   .content {
     float: right;
